# packetmock

./: .editorconfig  .gitignore  Cargo.toml  app.manifest  build.rs
.github/workflows/: build.yml
src/: cli.rs  http.rs  main.rs  mock.rs  mutex.rs  service.rs  tasksch.rs  tray.rs  windivert.rs
src/tray/: menu.rs  toast.rs  window.rs
src/windivert/: http.rs  mod.rs  ttl.rs
tools/: package.ps1  windivert.ps1
windivert-sys/: Cargo.toml  build.rs
windivert-sys/src/: lib.rs
