[package]
name = "packetmock"
version = "0.1.0"
edition = "2024"
authors = ["Seefaaa"]
description = "A tool that mocks network packets to bypass ISP censorship"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
color-eyre = "0.6.5"
ctrlc = { version = "3.4.7", features = ["termination"] }
thiserror = "2.0.16"
winapi = { version = "0.3.9", features = ["everything"] }
windows = "0.61.3"
windivert-sys = { path = "windivert-sys" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
env_logger = "0.11.8"
log = "0.4.27"
memchr = "2.7.5"
const_format = "0.2.34"
windows-service = "0.8.0"
smol = "2.0.2"

[build-dependencies]
bindgen = "0.72.0"
winres = "0.1.12"
