[package]
name = "packetmock"
version = "0.1.0"
edition = "2024"
authors = ["Seefaaa"]
description = "A tool that mocks network packets to bypass ISP censorship"

[workspace]
members = [".", "windivert-sys"]

[dependencies]
color-eyre = "0.6.5"
winapi = { version = "0.3.9", features = ["everything"] }
windivert-sys = { path = "windivert-sys" }
env_logger = "0.11.8"
log = "0.4.27"
const_format = "0.2.34"
windows-service = "0.8.0"
smol = "2.0.2"
windows = { version = "0.61.3", features = ["Data_Xml_Dom", "UI_Notifications", "Foundation", "ApplicationModel_Core", "Storage_Streams"] }
windows-registry = "0.5.3"
ctrlc = { version = "3.4.7", features = ["termination"] }

[build-dependencies]
winres = "0.1.12"
